Update for 2025: initial draft schedule
First real schedule: needs field balance improvements

--- a/fieldpick/reports/html_schedule.j2
+++ b/fieldpick/reports/html_schedule.j2
@@ -36,8 +36,8 @@
     <br>
     <b>Rookie through Majors:<b>
     <ul>
-    <li>Playoffs - Start in Week 10 - May 6th
-    <li>Championship Weekend - June 3rd and 4th
+    <li>Playoffs - Start in Week 10 - May 2nd
+    <li>Championship Weekend - May 31st and June 1st
     </ul>
     <br>
      <b>Notes:</b><br>
